# field-agent

./: .gitignore  CLAUDE.md  LICENSE.txt  MILESTONE-AI-INTEGRATION.md  README.md  ROADMAP.md  SECTION_CREATION_NOTES.md  composer.json  debug-test.sh
config/: field-agent.php
src/: Plugin.php  config.php
src/tools/craft-config-generator/: Cargo.toml  QUICK_START.md  README.md  craft-config-helper.sh  demo-api-fields.json  example-config.json  example-usage.md  real-estate-config.json  test-craft-api.json  test-link-field.json
src/tools/craft-config-generator/real-estate-output/: project.yaml
src/tools/craft-config-generator/real-estate-output/entryTypes/: propertyListing--6e8fd5c9-32dc-4d93-bc9f-cdea308193d4.yaml
src/tools/craft-config-generator/real-estate-output/fields/: bathrooms--cb11ee6a-4fb3-4cb4-ad91-97e7a1f9fa09.yaml  bedrooms--71b2251a-4b42-449c-b306-271cd19616dd.yaml  price--d957aadb-86ec-4d73-9e8c-acab99452752.yaml  propertyDescription--466df303-96d7-48c3-87a8-2b3c904248b7.yaml  propertyPhotos--63a73044-f329-4f71-9c22-6afd7c1bf37b.yaml  propertyType--cb22a41b-52b5-4ed0-8f2d-dfd0657f5733.yaml  realtorEmail--103fbf51-ac2f-45fd-a205-0d1971ac5d48.yaml  realtorName--c6a8da07-681d-444d-8a0a-be5311b31e03.yaml  realtorPhone--9400b80e-0f12-4adb-bea3-2c6b01237441.yaml  squareFootage--b67582c5-3e3a-4e45-b8fe-27639aee0486.yaml
src/tools/craft-config-generator/src/: config.rs  entry_type.rs  field.rs  generator.rs  main.rs
src/tools/craft-config-generator/test-basic-output/: project.yaml
src/tools/craft-config-generator/test-output/: project.yaml
(+99 files in other folders)
